examples/invalid/broken.whip
workflow Broken

agent worker {
  profile 42
  capacity nope
}

rule missing_body
  when started
=>
